--- a/force-app/main/default/classes/ReferringRemote.cls
+++ b/force-app/main/default/classes/ReferringRemote.cls
@@ -100,65 +100,28 @@ public without sharing class ReferringRemote {
     }
 
     @AuraEnabled
-    public static void saveParticipant(Id trialId, Id hcpeId, String pEnrollmentJSON, String participantJSON){
-        Participant__c participant = (Participant__c)JSON.deserialize(participantJSON, Participant__c.class);
-        participant.Language_Preference_Code__c = UserInfo.getLanguage();
-        HCP_Enrollment__c hcpEnrollment = HCPEnrollmentService.getInstance().getHCPEnrollmentByIdImpl(hcpeId, CommunityService.USER_MODE_HCP);
-        Participant_Enrollment__c participantEnrollment = (Participant_Enrollment__c)JSON.deserialize(pEnrollmentJSON, Participant_Enrollment__c.class);
-        participantEnrollment.Participant_Status__c = ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI;
-        if(participantEnrollment.Pre_screening_Status__c == ParticipantEnrollmentService.PES_STATUS_PENDING){
-            participantEnrollment.Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_PASS;
-        }
+    public static void saveParticipant(Id hcpeId, String pEnrollmentJSON, String participantJSON){
+        try {
+            Participant__c participant = (Participant__c) JSON.deserialize(participantJSON, Participant__c.class);
 
-        /*Database.SaveResult saveResult = Database.insert(participant, false);
-        if (!saveResult.isSuccess()) {
-            System.debug('PARTICIPANT INSERT ERROR');
-            for (Database.Error error : saveResult.getErrors()) {
-                if (error instanceof Database.DuplicateError) {
-                    Database.DuplicateError duplicateError = (Database.DuplicateError) error;
-                    Datacloud.DuplicateResult duplicateResult = duplicateError.getDuplicateResult();
-                    List<SObject> duplicateRecords = new List<SObject>();
-                    Datacloud.MatchResult[] matchResults = duplicateResult.getMatchResults();
-                    Datacloud.MatchResult matchResult = matchResults[0];
-                    Datacloud.MatchRecord[] matchRecords = matchResult.getMatchRecords();
-                    for (Datacloud.MatchRecord matchRecord : matchRecords) {
-                        participant = (Participant__c) matchRecord.getRecord();
-                        System.debug('FOUND PART DUPLICATE: ' + participant);
-                        break;
-                    }
-                }else{
-                    System.debug(error.getMessage());
-                    if(!Test.isRunningTest()) throw new AuraHandledException(error.getMessage());
-                }
+            Participant_Enrollment__c enrollment = (Participant_Enrollment__c)
+                    JSON.deserialize(pEnrollmentJSON, Participant_Enrollment__c.class);
+            enrollment.Participant_Status__c = PEStatusState.PE_STATUS_REFERRAL_SENT_TO_PI;
+            enrollment.Referral_Completed_by__c = CommunityService.getInstance().getCurrentContactId();
+            if (enrollment.Pre_screening_Status__c == ParticipantEnrollmentService.PES_STATUS_PENDING) {
+                enrollment.Pre_screening_Status__c = ParticipantEnrollmentService.PES_STATUS_PASS;
             }
-        }*/
 
-        DuplicateContactController.isPERCreated = true;
-        participant = DuplicateContactController.communityReffering(participant, participantEnrollment);
+            HCP_Enrollment__c hcpEnrollment =
+                    HCPEnrollmentService.getInstance().getHCPEnrollmentByIdImpl(hcpeId, CommunityService.USER_MODE_HCP);
+            enrollment.HCP__c = hcpEnrollment.Id;
+            enrollment.Study_Site__c = hcpEnrollment.Study_Site__c;
+            enrollment.PI_Contact__c = hcpEnrollment.Study_Site__r.Principal_Investigator__c;
+            enrollment.Referral_Source__c = ParticipantEnrollmentService.PE_REFERRAL_SOURCE_HCP;
 
-        if(participant.Id != null){
-            participantEnrollment.Participant__c = participant.Id;
-            participantEnrollment.HCP__c = hcpeId;
-            participantEnrollment.Study_Site__c = hcpEnrollment.Study_Site__c;
-            participantEnrollment.Referral_Completed_by__c = CommunityService.getInstance().getCurrentContactId();
-            participantEnrollment.PI_Contact__c = hcpEnrollment.Study_Site__r.Principal_Investigator__c;
-            if(participantEnrollment.Participant_Name__c == null) participantEnrollment.Participant_Name__c = participant.First_Name__c;
-            if(participantEnrollment.Participant_Surname__c == null) participantEnrollment.Participant_Surname__c = participant.Last_Name__c;
-            try{
-                System.debug(participantEnrollment);
-                upsert participantEnrollment;
-            }catch (Exception e){
-                String errorMsg = e.getMessage();
-                System.debug('STACK TRACE:' + e.getStackTraceString());
-                System.debug('MESSAGE:' + e.getMessage());
-                if(errorMsg.contains('DUPLICATE')) {
-                    errorMsg = 'This patient has already been referred to this study. A patient can only be referred to one trial at a time';
-                }
-                System.debug('ERROR: ' + errorMsg);
-                throw new AuraHandledException(errorMsg);
-            }
-        }else{
-            throw new AuraHandledException('Can not create participant');
+            ParticipantService.getInstance().createParticipantAndUpdatePEImpl(participant, enrollment);
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
         }
     }
 
