--- a/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
+++ b/force-app/main/tests/classes/Test_BaseCRCPCommunity.cls
@@ -289,7 +289,7 @@ private class Test_BaseCRCPCommunity {
         System.runAs(hcpUser) {
             List<SubscribeToReferralNetworkRemote.ReferralNetworkWrapper> recordsRN = SubscribeToReferralNetworkRemote.getReferralNetworkRecords('Referral_Network__c');
             SubscribeToReferralNetworkRemote.searchForReferralNetworks(recordsRN[0].Name, 'Referral_Network__c');
-            SubscribeToReferralNetworkRemote.deleteRecords(new List<Id>{
+            SubscribeToReferralNetworkRemote.deleteAndGetRefferalNetworks('Referral_Network__c', new List<Id>{
                     recordsRN[0].Id
             });
 
@@ -300,7 +300,7 @@ private class Test_BaseCRCPCommunity {
 
             List<SubscribeToReferralNetworkRemote.ReferralNetworkWrapper> recordsTA = SubscribeToReferralNetworkRemote.getReferralNetworkRecords('Therapeutic_Area__c');
             SubscribeToReferralNetworkRemote.searchForReferralNetworks(recordsTA[0].Name, 'Therapeutic_Area__c');
-            SubscribeToReferralNetworkRemote.deleteRecords(new List<Id>{
+            SubscribeToReferralNetworkRemote.deleteAndGetRefferalNetworks('Referral_Network__c', new List<Id>{
                     recordsTA[0].Id
             });
 
