--- a/force-app/main/tests/classes/Test_ManualTaskLookupRemote.cls
+++ b/force-app/main/tests/classes/Test_ManualTaskLookupRemote.cls
@@ -73,11 +73,11 @@ private class Test_ManualTaskLookupRemote {
 
         Test.startTest();
         List<LookupSearchResult> lookupSearchResults =
-                ManualTaskLookupRemote.searchCountries('us', selectedCountries);
+                ManualTaskLookupRemote.searchCountries('France', selectedCountries);
         Test.stopTest();
 
         LookupSearchResult expectedResult =
-                new LookupSearchResult('US', 'Country', null, 'United States', '');
+                new LookupSearchResult('FR', 'Country', null, 'France', '');
 
         assertThat(expectedResult, lookupSearchResults);
     }
