PEH-887 Test Refactor

--- a/force-app/main/tests/classes/TestData.cls
+++ b/force-app/main/tests/classes/TestData.cls
@@ -64,16 +64,16 @@ public class TestData {
         ];
     }
     
-    public void createPSE(){
+    public void updatePEStatusEnrollmentSuccess(){
         pe.Participant_Status__c = PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS;
         update pe;
-        pse = [
-                SELECT Id,
-                        Participant_Contact__c,
-                        Screening_ID__c
-                FROM Participant_Study_Enrollment__c
-                WHERE Participant__c =: participant.Id
-        ];
+//        pse = [
+//                SELECT Id,
+//                        Participant_Contact__c,
+//                        Screening_ID__c
+//                FROM Participant_Study_Enrollment__c
+//                WHERE Participant__c =: participant.Id
+//        ];
     }
     
     
@@ -236,7 +236,7 @@ public class TestData {
 
     }
 
-    public static void loadTcAcceptance() {
+    public static void createTCAcceptance() {
         User hcpUser = [SELECT Id FROM User WHERE ContactId = :hcpContact.Id];
 
         Terms_And_Conditions_Acceptance__c tc_acceptance = new Terms_And_Conditions_Acceptance__c(
