--- a/force-app/main/tests/classes/Test_VisitResultSharingService.cls
+++ b/force-app/main/tests/classes/Test_VisitResultSharingService.cls
@@ -7,7 +7,7 @@ private class Test_VisitResultSharingService {
     @IsTest
     static void processResultsTest() {
         TestData.loadTestData();
-        TestData.loadTcAcceptance();
+        TestData.createTCAcceptance();
 
         TestData testData = new TestData();
         testData.ctp.Shareback_Availability_Timing__c = 1;
@@ -102,7 +102,7 @@ private class Test_VisitResultSharingService {
     @IsTest
     static void testAll() {
         TestData.loadTestData();
-        TestData.loadTcAcceptance();
+        TestData.createTCAcceptance();
         Test.startTest();
         TestData testData = new TestData();
         Participant_Enrollment__c pe = testData.pe;
