--- a/force-app/main/tests/classes/Test_IntegrationPatientTriggerHandler.cls
+++ b/force-app/main/tests/classes/Test_IntegrationPatientTriggerHandler.cls
@@ -1,41 +1,47 @@
 @IsTest
 private class Test_IntegrationPatientTriggerHandler {
 
-    @TestSetup
-    static void setup() {
+    @IsTest
+    static void integration_Test(){
         Account acc = new Account();
         acc.Name = CommunityService.COMMUNITY_PARTICIPANT_ACCOUNT_NAME;
         insert acc;
-        ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1','2','3');
-    }
 
-    @IsTest
-    static void integration_Test(){
-        Integration_Patient__c externalPatient = new Integration_Patient__c();
-        externalPatient.External_ID__c = '1~2~3';
-        externalPatient.Subject_Status__c = 'Completed';
-        externalPatient.Subject_Date__c = Date.today().addDays(1);
-        externalPatient.IsDeletedInSDH__c = 'N';
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateStatusBasedInvitations.class);
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateWelcomeToStudyAlertHandler.class);
+        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.HideSurveyTasks.class);
+        ParticipantEnrollmentFactory.createParticipantEnrollmentRecords('1','2','3');
+
         Test.startTest();
+        Integration_Patient__c externalPatient = new Integration_Patient__c(
+                External_ID__c = '1~2~3',
+                Subject_Status__c = 'Completed',
+                Subject_Date__c = Date.today().addDays(1),
+                IsDeletedInSDH__c = 'N'
+        );
         insert externalPatient;
-        System.assertEquals('Participation Complete', getPseStatus());
+
+        System.assertEquals('Participation Complete', getEnrollmentStatus());
+
         externalPatient.IsDeletedInSDH__c = 'N';
         externalPatient.Subject_Status__c = 'Dropped';
         externalPatient.Subject_Date__c = Date.today().addDays(2);
         update externalPatient;
-        System.assertEquals('Drop Out', getPseStatus());
+
+        System.assertEquals('Drop Out', getEnrollmentStatus());
+
         update externalPatient;
-        System.assertEquals(3, [SELECT COUNT() FROM PSE_Status_History__c]);
+        System.assertEquals(3, [SELECT COUNT() FROM Participant_Enrollment_Status_History__c]);
         Test.stopTest();
     }
 
-    private static String getPseStatus(){
-        Participant_Study_Enrollment__c pse = [
+    private static String getEnrollmentStatus(){
+        Participant_Enrollment__c pe = [
                 SELECT  Id,
-                        Status__c
-                FROM    Participant_Study_Enrollment__c
+                        Participant_Status__c
+                FROM    Participant_Enrollment__c
                 WHERE   External_Key__c = '1~2~3'
         ];
-        return pse.Status__c;
+        return pe.Participant_Status__c;
     }
 }
