--- a/force-app/main/tests/classes/Test_VisitService.cls
+++ b/force-app/main/tests/classes/Test_VisitService.cls
@@ -6,91 +6,83 @@ private class Test_VisitService {
 
     @IsTest
     static void getVisitsTest() {
-        ParticipantService.ParticipantState state = new ParticipantService.ParticipantState();
-        state.pe = [
-                SELECT Id,
-                        Clinical_Trial_Profile__r.Visit_Plan__c
-                FROM Participant_Enrollment__c
-        ].get(0);
-        state.ctp = state.pe.Clinical_Trial_Profile__r;
-        state.showVisits = true;
-        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubFactory.newInstance(ParticipantService.class)
-                .when('getState')
-                .then(state)
-                .getInstance()
-        );
+        TestData.loadTestData();
+        TestData testData = new TestData();
+        testData.ctp = [SELECT Id, Visit_Plan__c FROM Clinical_Trial_Profile__c WHERE Id =: testData.ctp.Id];
+        testData.ctp.Visit_Plan__c = getVisitPlanId();
+        update testData.ctp;
 
-        Test.startTest();
-        List<Visit__c> visits = VisitService.getInstance().getVisits(null);
-        Test.stopTest();
+        testData.pe.Participant_Status__c = PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS;
+        update testData.pe;
 
-        List<Visit__c> visits2 = [
-                SELECT Id,
-                        Name,
-                        Icons__c,
-                        Order__c,
-                        Visit_Plan__c
-                FROM Visit__c
-                ORDER BY Order__c
-        ];
-        System.assertEquals(visits2.size(), visits.size());
+        System.runAs(testData.participantUser) {
+            Test.startTest();
+            List<Visit__c> visits = VisitService.getInstance().getVisits(null);
+            Test.stopTest();
 
-        for (Integer i = 0; i < visits2.size(); i++) {
-            Visit__c v1 = visits.get(i);
-            Visit__c v2 = visits2.get(i);
+            List<Visit__c> visits2 = [
+                    SELECT Id,
+                            Name,
+                            Icons__c,
+                            Order__c,
+                            Visit_Plan__c
+                    FROM Visit__c
+                    ORDER BY Order__c
+            ];
 
-            System.assertEquals(v1.Id, v2.Id);
-            System.assertEquals(v1.Name, v2.Name);
-            System.assertEquals(v1.Icons__c, v2.Icons__c);
+            System.assertEquals(visits2.size(), visits.size());
+
+            for (Integer i = 0; i < visits2.size(); i++) {
+                Visit__c v1 = visits.get(i);
+                Visit__c v2 = visits2.get(i);
+
+                System.assertEquals(v1.Id, v2.Id);
+                System.assertEquals(v1.Name, v2.Name);
+                System.assertEquals(v1.Icons__c, v2.Icons__c);
+            }
         }
     }
 
     @IsTest
     static void getPreviewVisitsTest() {
-        ParticipantService.ParticipantState state = new ParticipantService.ParticipantState();
-        state.pe = [
-                SELECT Id,
-                        Clinical_Trial_Profile__r.Visit_Plan__c
-                FROM Participant_Enrollment__c
-        ].get(0);
-        state.ctp = state.pe.Clinical_Trial_Profile__r;
-        state.showVisits = true;
-        ClassFactory.putStubTypeByClassName(ParticipantService.class, StubFactory.newInstance(ParticipantService.class)
-                .when('getState')
-                .then(state)
-                .getInstance()
-        );
+        TestData.loadTestData();
+        TestData testData = new TestData();
+        testData.ctp = [SELECT Id, Visit_Plan__c FROM Clinical_Trial_Profile__c WHERE Id =: testData.ctp.Id];
+        testData.ctp.Visit_Plan__c = getVisitPlanId();
+        update testData.ctp;
 
-        Test.startTest();
-        List<Visit__c> previewVisits = VisitService.getInstance().getPreviewVisits();
-        Test.stopTest();
+        testData.pe.Participant_Status__c = PEStatusState.PE_STATUS_ENROLLMENT_SUCCESS;
+        update testData.pe;
 
-        List<Visit__c> visits2 = [
-                SELECT Id,
-                        Name,
-                        Icons__c,
-                        Order__c,
-                        Visit_Plan__c
-                FROM Visit__c
-                ORDER BY Order__c
-                LIMIT 3
-        ];
-        System.assertEquals(visits2.size(), previewVisits.size());
+        System.runAs(testData.participantUser) {
+            Test.startTest();
+            List<Visit__c> previewVisits = VisitService.getInstance().getPreviewVisits();
+            Test.stopTest();
 
-        for (Integer i = 0; i < visits2.size(); i++) {
-            Visit__c v1 = previewVisits.get(i);
-            Visit__c v2 = visits2.get(i);
+            List<Visit__c> visits2 = [
+                    SELECT Id,
+                            Name,
+                            Icons__c,
+                            Order__c,
+                            Visit_Plan__c
+                    FROM Visit__c
+                    ORDER BY Order__c
+                    LIMIT 3
+            ];
+            System.assertEquals(visits2.size(), previewVisits.size());
 
-            System.assertEquals(v1.Id, v2.Id);
-            System.assertEquals(v1.Name, v2.Name);
-            System.assertEquals(v1.Icons__c, v2.Icons__c);
+            for (Integer i = 0; i < visits2.size(); i++) {
+                Visit__c v1 = previewVisits.get(i);
+                Visit__c v2 = visits2.get(i);
+
+                System.assertEquals(v1.Id, v2.Id);
+                System.assertEquals(v1.Name, v2.Name);
+                System.assertEquals(v1.Icons__c, v2.Icons__c);
+            }
         }
     }
 
-    @TestSetup
-    static void setup() {
-
-        TriggerHandlerExecutor.bypassHandler(ParticipantEnrollmentTriggerHandler.CreateUsersOrSendNotificationsHandler.class);
+    static Id getVisitPlanId() {
         Visit_Plan__c vp = new Visit_Plan__c(Name = 'Test Plan');
         insert vp;
 
@@ -113,42 +105,6 @@ private class Test_VisitService {
         }
         insert visits;
 
-        Clinical_Trial_Profile__c trial = new Clinical_Trial_Profile__c(
-                Protocol_ID__c = 'Prot-333',
-                NCT_Number__c = 'NCT02804789',
-                Visit_Plan__c = vp.Id
-        );
-        insert trial;
-
-        Account accountPartic = new Account(Name = 'Participant');
-        insert accountPartic;
-        Contact patientContact = new Contact(
-                FirstName = 'Richard',
-                LastName = 'Wilson',
-                Email = 'r.wilson@gmail.com',
-                userCommunityMode__c = 'Participant',
-                AccountId = accountPartic.Id
-        );
-        insert patientContact;
-
-        Participant__c participant = new Participant__c(
-                First_Name__c = patientContact.FirstName,
-                Contact__c = patientContact.Id
-        );
-        insert participant;
-
-        Participant_Enrollment__c pe = new Participant_Enrollment__c(
-                Patient_ID__c = 'SomePatientId1',
-                Referral_Source__c = 'HCP',
-                Participant__c = participant.Id
-        );
-        insert pe;
-
-        Participant_Study_Enrollment__c pse = new Participant_Study_Enrollment__c(
-                Clinical_Trial_Profile__c = trial.Id,
-                Participant__c = participant.Id,
-                Participant_Enrollment__c = pe.Id
-        );
-        insert pse;
+        return vp.Id;
     }
 }
