--- a/force-app/main/deprecated/classes/ParticipantStudyEnrollmentTriggerHandler.cls
+++ b/force-app/main/deprecated/classes/ParticipantStudyEnrollmentTriggerHandler.cls
@@ -3,8 +3,8 @@
  */
 public with sharing class ParticipantStudyEnrollmentTriggerHandler extends TriggerHandler {
 
-    protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+  /*  protected override void onAfterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
         TherapeuticAreaPatientService.deleteTherapeuticAreaPatientFromPSE(newList, (Map<Id, Participant_Study_Enrollment__c>) oldMap);
-    }
+    }*/
 
 }
