--- a/force-app/main/tests/classes/Test_MyTemRemote.cls
+++ b/force-app/main/tests/classes/Test_MyTemRemote.cls
@@ -10,6 +10,7 @@ public class Test_MyTemRemote {
         TestData.loadTestData();
         Test.startTest();
         TestData testDatanstance = new TestData();
+        testDatanstance.updatePEStatusEnrollmentSuccess();
         System.runAs(testDatanstance.participantUser){
             Contact delegateContact = new Contact(
                     FirstName = 'Del',
